--- a/templates/schedule_wizard.html
+++ b/templates/schedule_wizard.html
@@ -10,7 +10,7 @@
                     <h1 class="h2">Schedule Wizard: {{ pattern_config.name }}</h1>
                     <p class="text-muted">Configure and create your {{ pattern_config.name }} schedule</p>
                 </div>
-                <a href="{{ url_for('schedule.select') }}" class="btn btn-outline-secondary">
+                <a href="{{ url_for('schedule.schedule_select') }}" class="btn btn-outline-secondary">
                     <i class="bi bi-arrow-left"></i> Back to Pattern Selection
                 </a>
             </div>
